splitting to files.js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
     </div>
   </main>
 
-  <script type="module" src="{{ '/assets/js/wordplay.js' | relative_url }}"></script>
+  <script type="module" src="/assets/js/wordplay/index.js"></script> 
 </body>
 
 </html>
