--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,16 @@
 
 <!doctype html>
 {% include copyright.html %}
-<html lang="{{ site.locale | replace: " _", "-" | default: "en" }}" dir="{% if page.rtl %}rtl{% else %}ltr{% endif %}" class="no-js">
+<html lang="{{ site.locale | replace: " _", "-" | default: "en" }}" dir="{% if page.rtl %}rtl{% else %}ltr{% endif %}"
+  class="no-js">
 
 <head>
   <script>
-    (function() {  
+    (function () {
       var stored = localStorage.getItem('place-lang');
       if (stored === 'he' || stored === 'en') {
         const html = document.documentElement;
-        html.classList.remove('lang--he','lang--en');
+        html.classList.remove('lang--he', 'lang--en');
         html.classList.add('lang--' + stored);
         html.setAttribute('lang', stored);
         html.setAttribute('dir', stored === 'he' ? 'rtl' : 'ltr');
@@ -43,7 +44,8 @@
     </div>
   </main>
 
-  <script type="module" src="/assets/js/wordplay/index.js"></script> 
+<script type="module" src="/assets/js/wordplay/index.js"></script>
+
 </body>
 
 </html>
